--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -77,14 +77,13 @@ windows_task:
   test_script:
     - choco install nodejs --version=16.15.1 -y
     - choco install python git visualstudio2019-workload-vctools -y
-    # - choco install python git visualstudio2022buildtools visualstudio2022-workload-vctools visualstudio2022-workload-nodebuildtools visualstudio2022-workload-universalbuildtools -y
     - $env:path = "C:\Python310\Scripts\;C:\Python310\;$env:path;C:\Program Files\nodejs\;C:\Program Files\Git\cmd;C:\Users\User\AppData\Local\Microsoft\WindowsApps;C:\Users\User\AppData\Roaming\npm;C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\"
     - npm config set python C:\Python310\python.exe
     # - node-gyp configure --msvs_version=2015
     # - npm config set msbuild_path 'C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\MSBuild.exe'
     - (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install)
     - npx yarn run build
-    - cd apm; npx yarn install; .\node_modules\atom-package-manager\bin\npm rebuild; cd ..
+    # - cd apm; npx yarn install; .\node_modules\atom-package-manager\bin\npm rebuild; cd ..
     - npx playwright test ----reporter=aist
   videos_artifacts:
     path: tests\videos\**
