--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -81,7 +81,7 @@ windows_task:
     - npm config set python C:\Python310\python.exe
     # - node-gyp configure --msvs_version=2015
     # - npm config set msbuild_path 'C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\MSBuild.exe'
-    - (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install) -or (npx yarn install)
+    - npx yarn install; npx yarn install; npx yarn install; npx yarn install
     - npx yarn run build
     # - cd apm; npx yarn install; .\node_modules\atom-package-manager\bin\npm rebuild; cd ..
     - npx playwright test ----reporter=aist
