--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -80,8 +80,7 @@ windows_task:
     - choco install python git visualstudio2019-workload-vctools -y
     - npm config set python 'C:\Python310\python.exe'
   build_apm_script:
-    - cd apm
-    - npx yarn install
+    - cd apm; npx yarn install
     - ./node_modules/atom-package-manager/bin/npm rebuild
   test_script:
     - npx yarn install || npx yarn install || npx yarn install || npx yarn install
