--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -65,7 +65,7 @@ mac_task:
     - arch -x86_64 yarn run build:apm
     - sudo rm -rf /Library/Developer/CommandLineTools
     - arch -x86_64 xcode-select --install
-    - arch -x86_64 yarn dist
+    - arch -x86_64 yarn dist || arch -x86_64 yarn dist
   binary_artifacts:
     path: ./binaries/*
 
@@ -80,8 +80,8 @@ windows_task:
     - choco install python git visualstudio2019-workload-vctools -y
     - npm config set python 'C:\Python310\python.exe'
   build_apm_script:
-    - cd apm; npx yarn install
-    - ./node_modules/atom-package-manager/bin/npm rebuild
+    - cd apm; npx yarn install || npx yarn install
+    - ./node_modules/atom-package-manager/bin/npm rebuild || ./node_modules/atom-package-manager/bin/npm rebuild
   test_script:
     - npx yarn install || npx yarn install || npx yarn install || npx yarn install
     - npx yarn run build
