--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -28,7 +28,9 @@ linux_task:
     format: junit
   videos_artifacts:
     path: ./tests/videos/**
-  build_binary_script: yarn dist
+  build_binary_script:
+    - sed -i -e "s/-dev/-`date -u +%Y-%m-%d_%H`/g" package.json
+    - yarn dist
   binary_artifacts:
     path: ./binaries/*
 
@@ -52,6 +54,7 @@ mac_task:
     path: ./tests/videos/**
   build_arm_binary_script:
     - export PATH="/opt/homebrew/bin:/opt/homebrew/opt/node@16/bin:$PATH"
+    - sed -i -e "s/-dev/-`date -u +%Y-%m-%d_%H`/g" package.json
     - yarn dist
   binary_artifacts:
     path: ./binaries/*
