--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -29,7 +29,7 @@ linux_task:
   videos_artifacts:
     path: ./tests/videos/**
   build_binary_script:
-    - sed -i -e "s/-dev/-`date -u +%Y%m%d%H`/g" package.json
+    - sed -i -e "s/\d*-dev/`date -u +%Y%m%d%H`/g" package.json
     - yarn dist
   binary_artifacts:
     path: ./binaries/*
@@ -54,7 +54,7 @@ mac_task:
     path: ./tests/videos/**
   build_arm_binary_script:
     - export PATH="/opt/homebrew/bin:/opt/homebrew/opt/node@16/bin:$PATH"
-    - sed -i -e "s/-dev/-`date -u +%Y%m%d%H`/g" package.json
+    - sed -i -e "s/\d*-dev/`date -u +%Y%m%d%H`/g" package.json
     - yarn dist
   binary_artifacts:
     path: ./binaries/*
@@ -86,7 +86,7 @@ windows_task:
     - cd apm; npx yarn install || sleep 1 && npx yarn install || sleep 5 && npx yarn install
     - ./node_modules/atom-package-manager/bin/npm rebuild || ./node_modules/atom-package-manager/bin/npm rebuild
   test_script:
-    - npx yarn install || npx yarn install || npx yarn install || npx yarn install || echo "COULD NOT INSTALL, WILL KEEP RUNNING"
+    - yarn install || sleep 1 && yarn install || sleep 2 && yarn cache clean; yarn install || sleep 2 && yarn install || sleep 2 && yarn cache clean; yarn install || sleep 2 && yarn install
     - npx yarn run build
     - npx playwright test --reporter=list
   videos_artifacts:
