--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -88,7 +88,7 @@ windows_task:
   test_script:
     - npx yarn install || sleep 1 && npx yarn install || sleep 2 && npx yarn cache clean; npx yarn install || sleep 2 && npx yarn install || sleep 2 && npx yarn cache clean; npx yarn install || sleep 2 && npx yarn install
     - npx yarn run build
-    - npx playwright test --reporter=list
+    # - npx playwright test --reporter=list
   videos_artifacts:
     path: tests\videos\**
   build_binary_script:
