--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -92,7 +92,7 @@ windows_task:
   videos_artifacts:
     path: tests\videos\**
   build_binary_script:
-    - sed -i -e "s/[0-9]*-dev/`date -u +%Y%m%d%H`/g" package.json
+    # - sed -i -e "s/[0-9]*-dev/`date -u +%Y%m%d%H`/g" package.json
     - npx yarn dist
   binary_artifacts:
     path: .\binaries\*
