--- a/script/vsts/platforms/templates/preparation.yml
+++ b/script/vsts/platforms/templates/preparation.yml
@@ -1,5 +1,4 @@
 steps:
-
   # Linux Specific
   - script: |
       sudo apt-get update
@@ -8,7 +7,6 @@ steps:
       clang -v
     displayName: Install apt dependencies
     condition: eq(variables['Agent.OS'], 'Linux')
-
 
   - script: sudo /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16
     displayName: Start Xvfb
@@ -45,8 +43,6 @@ steps:
     displayName: Install script/vsts dependencies
     condition: or(eq(variables['Agent.OS'], 'Windows_NT'), eq(variables['IsReleaseBranch'], 'true'), eq(variables['IsSignedZipBranch'], true), eq(variables['IsNightlyBranch'], 'true'))
 
-  # Windows Specific
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: '3.8'
-    condition: eq(variables['Agent.OS'], 'Windows_NT')
+      versionSpec: "3.8"
