ci: fix the lint npm version mismatch

--- a/script/vsts/lint.yml
+++ b/script/vsts/lint.yml
@@ -4,6 +4,9 @@ jobs:
     pool:
       vmImage: ubuntu-latest
     steps:
+      - script: npm install --global npm@7
+        displayName: Update npm
+
       - script: |
           cd script
           npm ci
