--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "archive-view": "https://www.atom.io/api/packages/archive-view/versions/0.66.0/tarball",
     "async": "3.2.0",
     "atom-dark-syntax": "file:packages/atom-dark-syntax",
+    "etch-solid": "file:packages/etch-solid",
     "atom-dark-ui": "file:packages/atom-dark-ui",
     "atom-keymap": "8.2.15",
     "atom-light-syntax": "file:packages/atom-light-syntax",
