Adding some preliminary config for Webpack

--- a/package.json
+++ b/package.json
@@ -290,10 +290,14 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.22.2",
+    "coffee-loader": "^4.0.0",
+    "coffeescript": "1.12.7",
     "electron": "12.2.3",
     "electron-builder": "^23.2.0",
     "electron-rebuild": "^3.2.7",
     "playwright": "^1.22.2",
-    "playwright-core": "^1.22.2"
+    "playwright-core": "^1.22.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
