--- a/package.json
+++ b/package.json
@@ -292,8 +292,10 @@
     "@playwright/test": "^1.22.2",
     "electron": "12.2.3",
     "electron-builder": "^23.2.0",
+    "electron-link": "^0.6.0",
     "electron-rebuild": "^3.2.7",
     "playwright": "^1.22.2",
-    "playwright-core": "^1.22.2"
+    "playwright-core": "^1.22.2",
+    "terser": "^5.14.1"
   }
 }
