--- a/package.json
+++ b/package.json
@@ -289,7 +289,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@playwright/test": "^1.22.2",
+    "babel-loader": "^8.2.5",
+    "babel-preset-atomic": "^4.4.0",
+    "bytenode": "^1.3.6",
     "coffee-loader": "^4.0.0",
     "coffeescript": "1.12.7",
     "electron": "12.2.3",
