--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "atom",
+  "author": "Atom Community <atom@atom.com.br>",
   "productName": "Atom",
   "version": "1.63.0-dev",
   "description": "A hackable text editor for the 21st Century.",
@@ -69,7 +70,6 @@
     "fuzzy-finder": "https://www.atom.io/api/packages/fuzzy-finder/versions/1.14.3/tarball",
     "git-diff": "file:packages/git-diff",
     "git-utils": "5.7.1",
-    "github": "https://www.atom.io/api/packages/github/versions/0.36.10/tarball",
     "glob": "^7.1.1",
     "go-to-line": "file:packages/go-to-line",
     "grammar-selector": "file:packages/grammar-selector",
@@ -161,7 +161,7 @@
     "temp": "0.9.2",
     "text-buffer": "^13.18.5",
     "timecop": "https://www.atom.io/api/packages/timecop/versions/0.36.2/tarball",
-    "tree-sitter": "git+https://github.com/DeeDeeG/node-tree-sitter.git#bb298eaae66e0c4f11908cb6209f3e141884e88e",
+    "tree-sitter": "^0.17.2",
     "tree-view": "https://www.atom.io/api/packages/tree-view/versions/0.229.1/tarball",
     "typescript-simple": "8.0.6",
     "update-package-dependencies": "file:./packages/update-package-dependencies",
@@ -205,7 +205,6 @@
     "exception-reporting": "file:./packages/exception-reporting",
     "find-and-replace": "0.219.8",
     "fuzzy-finder": "1.14.3",
-    "github": "0.36.10",
     "git-diff": "file:./packages/git-diff",
     "go-to-line": "file:./packages/go-to-line",
     "grammar-selector": "file:./packages/grammar-selector",
@@ -270,7 +269,11 @@
   "private": true,
   "scripts": {
     "preinstall": "node -e 'process.exit(0)'",
-    "test": "node script/test"
+    "test": "node script/test",
+    "build": "electron-rebuild",
+    "build:apm": "cd apm; yarn install; ./node_modules/atom-package-manager/bin/npm rebuild",
+    "start": "electron .",
+    "dist": "node script/electron-builder.js"
   },
   "standard-engine": "./script/node_modules/standard",
   "standard": {
@@ -284,5 +287,10 @@
       "atom",
       "snapshotResult"
     ]
+  },
+  "devDependencies": {
+    "electron": "11.5.0",
+    "electron-builder": "^23.1.0",
+    "electron-rebuild": "^3.2.7"
   }
 }
