--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "url": "https://github.com/atom/atom/issues"
   },
   "license": "MIT",
-  "electronVersion": "12.2.3",
+  "electronVersion": "15.5.7",
   "dependencies": {
     "@atom/fuzzy-native": "^1.2.1",
-    "@atom/nsfw": "^1.0.28",
     "@atom/source-map-support": "^0.3.4",
-    "@atom/watcher": "^1.3.5",
+    "@atom/watcher": "file:../watcher",
     "about": "file:packages/about",
     "archive-view": "https://www.atom.io/api/packages/archive-view/versions/0.66.0/tarball",
     "async": "3.2.0",
@@ -128,6 +127,7 @@
     "mock-spawn": "^0.2.6",
     "normalize-package-data": "3.0.2",
     "notifications": "https://www.atom.io/api/packages/notifications/versions/0.72.1/tarball",
+    "nsfw": "^2.2.2",
     "nslog": "^3.0.0",
     "one-dark-syntax": "file:packages/one-dark-syntax",
     "one-dark-ui": "file:packages/one-dark-ui",
@@ -155,13 +155,13 @@
     "spell-check": "https://www.atom.io/api/packages/spell-check/versions/0.77.1/tarball",
     "status-bar": "https://www.atom.io/api/packages/status-bar/versions/1.8.17/tarball",
     "styleguide": "https://www.atom.io/api/packages/styleguide/versions/0.49.12/tarball",
-    "superstring": "^2.4.4",
+    "superstring": "file:../superstring",
     "symbols-view": "https://www.atom.io/api/packages/symbols-view/versions/0.118.4/tarball",
     "tabs": "https://www.atom.io/api/packages/tabs/versions/0.110.2/tarball",
     "temp": "0.9.2",
     "text-buffer": "^13.18.5",
     "timecop": "https://www.atom.io/api/packages/timecop/versions/0.36.2/tarball",
-    "tree-sitter": "^0.20.0",
+    "tree-sitter": "file:../node-tree-sitter",
     "tree-view": "https://www.atom.io/api/packages/tree-view/versions/0.229.1/tarball",
     "typescript-simple": "8.0.6",
     "update-package-dependencies": "file:./packages/update-package-dependencies",
@@ -290,7 +290,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.22.2",
-    "electron": "12.2.3",
+    "electron": "15.5.7",
     "electron-builder": "^23.2.0",
     "electron-rebuild": "^3.2.7",
     "playwright": "^1.22.2",
