--- a/package.json
+++ b/package.json
@@ -273,7 +273,7 @@
   "scripts": {
     "preinstall": "node -e 'process.exit(0)'",
     "test": "node script/test",
-    "build": "electron-rebuild",
+    "build": "electron-builder install-app-deps",
     "build:apm": "cd apm; yarn install; ./node_modules/atom-package-manager/bin/npm rebuild",
     "start": "electron --enable-logging . -f",
     "dist": "node script/electron-builder.js"
@@ -295,7 +295,6 @@
     "@playwright/test": "^1.22.2",
     "electron": "12.2.3",
     "electron-builder": "^23.2.0",
-    "electron-rebuild": "^3.2.7",
     "playwright": "^1.22.2",
     "playwright-core": "^1.22.2"
   }
