--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "fuzzaldrin": "^2.1",
     "fuzzy-finder": "https://www.atom.io/api/packages/fuzzy-finder/versions/1.14.3/tarball",
     "git-diff": "file:packages/git-diff",
-    "git-utils": "5.7.1",
+    "git-utils": "5.7.3",
     "github": "git+https://github.com/pulsar-edit/github.git#version-bump",
     "glob": "^7.1.1",
     "go-to-line": "file:packages/go-to-line",
@@ -273,7 +273,7 @@
   "scripts": {
     "preinstall": "node -e 'process.exit(0)'",
     "test": "node script/test",
-    "build": "electron-builder install-app-deps",
+    "build": "electron-rebuild",
     "build:apm": "cd apm; yarn install; ./node_modules/atom-package-manager/bin/npm rebuild",
     "start": "electron --enable-logging . -f",
     "dist": "node script/electron-builder.js"
@@ -294,7 +294,8 @@
   "devDependencies": {
     "@playwright/test": "^1.22.2",
     "electron": "12.2.3",
-    "electron-builder": "^23.1.0",
+    "electron-builder": "23.3.1",
+    "electron-rebuild": "3.2.7",
     "playwright": "^1.22.2",
     "playwright-core": "^1.22.2"
   }
