--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "fuzzy-finder": "https://www.atom.io/api/packages/fuzzy-finder/versions/1.14.3/tarball",
     "git-diff": "file:packages/git-diff",
     "git-utils": "5.7.3",
+    "@pulsar-edit/github": "0.36.11",
     "glob": "^7.1.1",
     "go-to-line": "file:packages/go-to-line",
     "grammar-selector": "file:packages/grammar-selector",
@@ -206,6 +207,7 @@
     "exception-reporting": "file:./packages/exception-reporting",
     "find-and-replace": "0.220.1",
     "fuzzy-finder": "1.14.3",
+    "@pulsar-edit/github": "0.36.11",
     "git-diff": "file:./packages/git-diff",
     "go-to-line": "file:./packages/go-to-line",
     "grammar-selector": "file:./packages/grammar-selector",
