--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -19,7 +19,7 @@ linux_task:
                 libnss3
                 xvfb
     - yarn install || sleep 1 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install
-    - ./node_modules/.bin/electron-rebuild
+    - yarn build
     - yarn run build:apm
     - Xvfb :99 & DISPLAY=:99 PLAYWRIGHT_JUNIT_OUTPUT_NAME=report.xml npx playwright test --reporter=junit,list
   always:
@@ -44,7 +44,7 @@ mac_task:
     - ln -s /opt/homebrew/bin/python3 /opt/homebrew/bin/python
     - export PATH="/opt/homebrew/bin:/opt/homebrew/opt/node@16/bin:$PATH"
     - yarn install || sleep 1 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install || sleep 2 && yarn install
-    - ./node_modules/.bin/electron-rebuild
+    - yarn build
     - yarn run build:apm
     - PLAYWRIGHT_JUNIT_OUTPUT_NAME=report.xml npx playwright test --reporter=junit,list
   always:
@@ -66,7 +66,7 @@ mac_task:
     - arch -x86_64 brew install node@16 yarn git python
     - ln -s /usr/local/opt/python3 /usr/local/bin/python
     - export PATH="/usr/local/opt/node@16/bin:/usr/local/bin/python3:$PATH"
-    - arch -x86_64 ./node_modules/.bin/electron-rebuild
+    - arch -x86_64 yarn build
     - arch -x86_64 yarn run build:apm
     - sudo rm -rf /Library/Developer/CommandLineTools
     - arch -x86_64 xcode-select --install
@@ -91,7 +91,7 @@ windows_task:
     - npx yarn install --ignore-scripts || sleep 1 && npx yarn install --ignore-scripts || sleep 2 && npx yarn cache clean; npx yarn install --ignore-scripts || sleep 2 && npx yarn install --ignore-scripts || echo "Giving up"
     - rm -R node_modules/electron
     - npx yarn install || sleep 1 && npx yarn install || sleep 2 && npx yarn cache clean; npx yarn install || sleep 2 && npx yarn install || echo "Giving up"
-    - node ./node_modules/.bin/electron-rebuild
+    - npx yarn build
     # - npx playwright test --reporter=list
   videos_artifacts:
     path: tests\videos\**
