--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "async": "3.2.0",
     "atom-dark-syntax": "file:packages/atom-dark-syntax",
     "atom-dark-ui": "file:packages/atom-dark-ui",
-    "atom-keymap": "8.2.15",
+    "@neutron-editor/keymap": "^0.0.2",
     "atom-light-syntax": "file:packages/atom-light-syntax",
     "atom-light-ui": "file:packages/atom-light-ui",
     "atom-select-list": "^0.8.1",
@@ -39,7 +39,6 @@
     "base16-tomorrow-dark-theme": "file:packages/base16-tomorrow-dark-theme",
     "base16-tomorrow-light-theme": "file:packages/base16-tomorrow-light-theme",
     "bookmarks": "https://www.atom.io/api/packages/bookmarks/versions/0.46.0/tarball",
-    "bracket-matcher": "https://www.atom.io/api/packages/bracket-matcher/versions/0.92.0/tarball",
     "chai": "4.3.4",
     "chart.js": "2.9.4",
     "clear-cut": "^2.0.2",
@@ -60,7 +59,7 @@
     "exception-reporting": "file:packages/exception-reporting",
     "find-and-replace": "https://www.atom.io/api/packages/find-and-replace/versions/0.219.8/tarball",
     "find-parent-dir": "^0.3.0",
-    "first-mate": "7.4.3",
+    "@neutron-editor/first-mate": "0.0.2",
     "focus-trap": "6.3.0",
     "fs-admin": "0.15.0",
     "fs-plus": "^3.1.1",
@@ -68,7 +67,7 @@
     "fuzzaldrin": "^2.1",
     "fuzzy-finder": "https://www.atom.io/api/packages/fuzzy-finder/versions/1.14.3/tarball",
     "git-diff": "file:packages/git-diff",
-    "git-utils": "5.7.1",
+    "@neutron-editor/git-utils": "^0.0.2",
     "glob": "^7.1.1",
     "go-to-line": "file:packages/go-to-line",
     "grammar-selector": "file:packages/grammar-selector",
@@ -135,13 +134,13 @@
     "one-light-ui": "file:packages/one-light-ui",
     "open-on-github": "https://www.atom.io/api/packages/open-on-github/versions/1.3.2/tarball",
     "package-generator": "https://www.atom.io/api/packages/package-generator/versions/1.3.0/tarball",
-    "pathwatcher": "^8.1.2",
+    "@neutron-editor/pathwatcher": "0.0.1",
     "postcss": "8.2.10",
     "postcss-selector-parser": "6.0.4",
     "prebuild-install": "6.0.0",
     "property-accessors": "^1.1.3",
     "resolve": "1.18.1",
-    "scandal": "^3.2.0",
+    "scandal": "file:../scandal",
     "scoped-property-store": "^0.17.0",
     "scrollbar-style": "^4.0.1",
     "season": "^6.0.2",
@@ -155,14 +154,14 @@
     "spell-check": "https://www.atom.io/api/packages/spell-check/versions/0.77.1/tarball",
     "status-bar": "https://www.atom.io/api/packages/status-bar/versions/1.8.17/tarball",
     "styleguide": "https://www.atom.io/api/packages/styleguide/versions/0.49.12/tarball",
-    "superstring": "file:../superstring",
+    "superstring": "https://github.com/pulsar-edit/superstring.git#context-aware",
     "symbols-view": "https://www.atom.io/api/packages/symbols-view/versions/0.118.4/tarball",
     "tabs": "https://www.atom.io/api/packages/tabs/versions/0.110.2/tarball",
     "temp": "0.9.2",
-    "text-buffer": "^13.18.5",
+    "@neutron-editor/text-buffer": "^0.0.1",
     "timecop": "https://www.atom.io/api/packages/timecop/versions/0.36.2/tarball",
     "tree-sitter": "file:../node-tree-sitter",
-    "tree-view": "https://www.atom.io/api/packages/tree-view/versions/0.229.1/tarball",
+    "tree-view": "file:../../neutron/packages/tree-view/",
     "typescript-simple": "8.0.6",
     "update-package-dependencies": "file:./packages/update-package-dependencies",
     "vscode-ripgrep": "1.9.0",
@@ -196,7 +195,6 @@
     "autosave": "0.24.6",
     "background-tips": "0.28.0",
     "bookmarks": "0.46.0",
-    "bracket-matcher": "0.92.0",
     "command-palette": "0.43.5",
     "dalek": "file:./packages/dalek",
     "deprecation-cop": "file:./packages/deprecation-cop",
@@ -226,7 +224,7 @@
     "symbols-view": "0.118.4",
     "tabs": "0.110.2",
     "timecop": "0.36.2",
-    "tree-view": "0.229.1",
+    "tree-view": "file:../../neutron/packages/tree-view/",
     "update-package-dependencies": "file:./packages/update-package-dependencies",
     "welcome": "file:./packages/welcome",
     "whitespace": "0.37.8",
