--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: install dependencies
-      run: yarn install
+      run: yarn install || yarn install || yarn install || yarn install
 
     - name: build dependencies
       run: yarn build
