--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,10 @@ jobs:
     - name: install dependencies
       run: yarn install || yarn install || yarn install || yarn install
 
+    - name: start virtual X on Linux
+      if: ${{ contains(matrix.os, 'ubuntu') }}
+      run: apt-get -y install xvfb && Xvfb :99 & export DISPLAY=:99
+
     - name: build dependencies
       run: yarn build
 
