--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,8 @@ jobs:
     - name: Run the tests on sane OSes
       uses: GabrielBB/xvfb-action@v1
       if: ${{ !contains(matrix.os, 'windows') }}
-      run: node script/run-package-tests.js
+      with:
+        run: node script/run-package-tests.js
 
     - name: Run the tests on Windows
       if: ${{ contains(matrix.os, 'windows') }}
