--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "fuzzy-finder": "https://codeload.github.com/atom/fuzzy-finder/legacy.tar.gz/refs/tags/v1.14.3",
     "git-diff": "file:packages/git-diff",
     "@neutron-editor/git-utils": "^0.0.2",
-    "github": "https://github.com/pulsar-edit/github.git#v0.36.11",
     "glob": "^7.1.1",
     "go-to-line": "file:packages/go-to-line",
     "grammar-selector": "file:packages/grammar-selector",
@@ -158,17 +157,16 @@
     "snippets": "https://github.com/atom-community/snippets/archive/cdde11928c19d4969aba9a8dc5b1030ab68c4be2.tar.gz",
     "solarized-dark-syntax": "file:packages/solarized-dark-syntax",
     "solarized-light-syntax": "file:packages/solarized-light-syntax",
-    "@neutron-editor/text-buffer": "^0.0.1",
+    "text-buffer": "file:../text-buffer",
     "spell-check": "https://codeload.github.com/atom/spell-check/legacy.tar.gz/refs/tags/v0.77.1",
     "status-bar": "https://codeload.github.com/atom/status-bar/legacy.tar.gz/refs/tags/v1.8.17",
     "styleguide": "https://codeload.github.com/atom/styleguide/legacy.tar.gz/refs/tags/v0.49.12",
-    "superstring": "^2.4.4",
+    "superstring": "https://github.com/pulsar-edit/superstring#deprecate-old-api",
     "symbols-view": "https://codeload.github.com/atom/symbols-view/legacy.tar.gz/refs/tags/v0.118.4",
     "tabs": "https://codeload.github.com/atom/tabs/legacy.tar.gz/refs/tags/v0.110.2",
     "temp": "0.9.2",
     "timecop": "https://codeload.github.com/atom/timecop/legacy.tar.gz/refs/tags/v0.36.2",
-    "tree-sitter": "0.20.0",
-    "tree-view": "https://codeload.github.com/atom/tree-view/legacy.tar.gz/refs/tags/v0.229.1",
+    "tree-sitter": "file:../node-tree-sitter",
     "typescript-simple": "8.0.6",
     "update-package-dependencies": "file:./packages/update-package-dependencies",
     "vscode-ripgrep": "1.9.0",
@@ -210,7 +208,6 @@
     "exception-reporting": "file:./packages/exception-reporting",
     "find-and-replace": "0.220.1",
     "fuzzy-finder": "1.14.3",
-    "github": "0.36.11",
     "git-diff": "file:./packages/git-diff",
     "go-to-line": "file:./packages/go-to-line",
     "grammar-selector": "file:./packages/grammar-selector",
@@ -231,7 +228,6 @@
     "symbols-view": "0.118.4",
     "tabs": "0.110.2",
     "timecop": "0.36.2",
-    "tree-view": "file:../../neutron/packages/tree-view/",
     "update-package-dependencies": "file:./packages/update-package-dependencies",
     "welcome": "file:./packages/welcome",
     "whitespace": "0.37.8",
