--- a/.github/workflows/package-tests-linux.yml
+++ b/.github/workflows/package-tests-linux.yml
@@ -168,5 +168,5 @@ jobs:
     - name: Run ${{ matrix.package }} Tests
       uses: GabrielBB/xvfb-action@v1
       with:
-        run: yarn start --test node_modules/{{ matrix.package }}/spec
+        run: PACKAGE="{{ matrix.package }}" yarn start --test "node_modules/$PACKAGE/spec"
         # run: node -e "require('./script/run-package-tests')(/${{ matrix.package }}/)"
