--- a/.github/workflows/package-tests-linux.yml
+++ b/.github/workflows/package-tests-linux.yml
@@ -163,8 +163,8 @@ jobs:
         key: pulsar-$env:GITHUB_SHA
 
     - name: Log ${{ matrix.package }} Tests
-      run: echo "Dir"; ls -a; echo "Node"; ls node_modules
+      run: echo "Dir"; ls -a; echo "Node"; ls node_modules/${{ matrix.package }}
 
     - name: Run ${{ matrix.package }} Tests
-      run: cd node_modules/${{ matrix.package }} && ls; ls ../..; ../../pulsar.appimage --test spec
+      run: apt-get update && apt-get install -y xvfb && Xvfb :1 & cd node_modules/${{ matrix.package }} && DISPLAY=:1 ../../pulsar.appimage --test spec
         # run: node -e "require('./script/run-package-tests')(/${{ matrix.package }}/)"
