--- a/.github/workflows/package-tests-linux.yml
+++ b/.github/workflows/package-tests-linux.yml
@@ -27,10 +27,10 @@ jobs:
       run: yarn build:apm
 
     - name: build the editor
-      run: yarn dist appimage && mv binaries/Pulsar*AppImage pulsar.appimage
+      run: yarn dist deb && dpkg -i binaries/*deb && apt-get -f install -y
 
     - name: test the editor
-      run: ./pulsar.appimage -- version
+      run: pulsar -- version
 
     - name: Cache node_modules
       id: cache-node
