--- a/.github/workflows/package-tests-linux.yml
+++ b/.github/workflows/package-tests-linux.yml
@@ -159,8 +159,11 @@ jobs:
       id: restore-pulsar
       uses: actions/cache@v3
       with:
-        path: sudo dpkg -i pulsar.deb && sudo apt-get -f install -y
+        path: pulsar.deb
         key: pulsar-$env:GITHUB_SHA
+
+    - name: Install Pulsar
+      run: sudo dpkg -i pulsar.deb && sudo apt-get -f install -y 
 
     - name: Install xvfb
       run: sudo apt-get install -y xvfb
