--- a/.github/workflows/package-tests-linux.yml
+++ b/.github/workflows/package-tests-linux.yml
@@ -166,5 +166,5 @@ jobs:
       run: sudo apt-get install -y xvfb
 
     - name: Run ${{ matrix.package }} Tests
-      run: Xvfb :1 & cd node_modules/${{ matrix.package }} && DISPLAY=:1 pulsar --test spec
+      run: Xvfb :1 & cd node_modules/${{ matrix.package }} && if [[ -f spec ]]; then DISPLAY=:1 pulsar --test spec; fi
         # run: node -e "require('./script/run-package-tests')(/${{ matrix.package }}/)"
