--- a/.github/workflows/package-tests-linux.yml
+++ b/.github/workflows/package-tests-linux.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: node_modules
-        key: linux-modules-$env:GITHUB_SH
+        key: linux-modules-$env:GITHUB_SHA
 
     - name: Cache pulsar
       id: cache-pulsar
