--- a/.github/workflows/package-tests-linux.yml
+++ b/.github/workflows/package-tests-linux.yml
@@ -1,4 +1,4 @@
-name: Package tests for Pulsar on Linux
+name: Core package
 on:
   - pull_request
 env:
@@ -39,7 +39,7 @@ jobs:
         key: pulsar-$env:GITHUB_SHA
 
   test:
-    name: Package
+    name: test
     needs: setup
     runs-on: ubuntu-20.04
     strategy:
